<resources>
    <string name="app_name">GPS Ping</string>
    <string name="login">Login</string>
    <string name="userName">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="loginCanNotBeEmpty">Username can not be empty</string>
    <string name="passwordCanNotBeEmpty">Password can not be empty</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="emailCanNotBeEmpty">Email can not be empty</string>
    <string name="passwordNotConfirmed">Password does not match the confirm password</string>
    <string name="activeTracker">Active tracker:</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="mapAndTracking">Map and Tracking</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="trackers">Trackers</string>
    <string name="connect">Connect</string>
    <string name="geofence">Geofence</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="visitWebsite">Visit Website</string>
    <string name="contactUs">Contact Us</string>
    <string name="aboutApp">About App</string>
    <string name="youCanOrder">You can order Tracker using Contact Us button</string>
    <string name="geofenceDesc">Input number of yards in diameter for geofence. <b>Remember to turn off geofence when stopping.</b></string>
    <string name="yards">Yards</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="save">Save</string>
    <string name="phoneNumberCanNotBeEmpty">Phone number can not be empty</string>
    <string name="yardsCanNotBeEmpty">Yards can not be empty</string>
    <string name="logout">Logout</string>
    <string name="chooseTracker">Choose Tracker</string>
    <string name="addTracker">Add tracker</string>
    <string name="tracker">Tracker</string>
    <string name="name">Name</string>
    <string name="imeiNumber">IMEI Number</string>
    <string name="trackerNumber">Tracker Number</string>
    <string name="imeiAndTrackerNumber">IMEI and tracker number</string>
    <string name="addTrackerButton">Add Tracker</string>
    <string name="signal">Signal</string>
    <string name="receiveSignalEvery">Receive signal every</string>
    <string name="checkThisDog">Check this for dog in stand</string>
    <string name="trackerNameCanNotBeEmpty">Tracker name can not be empty</string>
    <string name="imeiCanNotBeEmpty">IMEI Number can not be empty</string>
    <string name="trackerNumberCanNotBeEmpty">Tracker Number can not be empty</string>
    <string name="trackerNumberN">Tracker Number:\t\t%1$s</string>
    <string name="trackerImeiN">IMEI Number:\t\t\t%1$s</string>
    <string name="removeTracker">Remove\ntracker</string>
    <string name="aboutAppText">
        About the abb\n\nThis app let´s you see the gps position of a gps tracker.\n\nBefore you start, go to settings and input the imei number and tracker number. Select signal interval. Tap save and go back to main menu to start the tracker.\n\n        Tap Start Tracker to turn the trackers signal on. You will receive a text message back from the tracker when it is sending. You will see the trackers last position as a green triangle.\n\nEarlier positions are marked with green circle.\n\n
    </string>
    <string name="editTracker">Edit\ntracker</string>
    <string name="editTrackerToolbar">Edit Tracker</string>
    <string name="update">Update</string>
    <string name="friends">Friends</string>
    <string name="addFriend">Add friend</string>
    <string name="removeFriend">Remove\nfriend</string>
    <string name="search">Search people</string>
    <string name="selectTracker">Select tracker you want to activate:</string>
    <string name="selectYourTracker">Select your tracker:</string>
    <string name="wait">Please, wait…</string>
    <string name="nameCanNotBeEmpty">Name can not be empty</string>
    <string name="fullName">Name</string>
    <string name="satellite">Satellite</string>
    <string name="standard">Standard</string>
    <string name="topo">Topo</string>
    <string name="photo">Photo</string>
    <string name="removeTracks">Remove tracks</string>
    <string name="map">Map</string>
    <string name="edit">Edit</string>
    <string name="all">All</string>
    <string name="notify_photo_title">Photo</string>
    <string name="notify_photo_text">GPS Ping</string>
    <string name="profileSaved">Profile successfully updated</string>
    <string name="smsAlertDialogTitle">SMS</string>
    <string name="smsAlertDialogMessage">This will send an sms to your tracker</string>
    <string name="trackerUpdated">Tracker successfully updated</string>
    <string name="trackerHistoryUpdated">Tracking History successfully updated</string>
    <string name="locationMessage">Location tracking</string>
    <string name="friendShipRequest">Friendship request</string>
    <string name="friendShipRequestMessage">%1$s wants to be friends with you. Do you confirm your friendship?</string>
    <string name="friendShipRequestNotifyMessage">wants to be friends with you</string>
    <string name="PUSH_MESSSAGE_FRIEND_REQUEST">%1$s wants to be friends with you</string>
    <string name="PUSH_MESSSAGE_CHECK_FOR_STAND">Your tracker is now standing still in the same position.</string>
    <string name="confirm">Confirm</string>
    <string name="owner">Owner:</string>
    <string name="originalGpsTracker">Original GPS Tracker</string>
    <string name="gpsPingMarcel">GPS Ping Marcel</string>
    <string name="gpsPingIsabella">GPS Ping Isabella</string>
    <string name="trackerNumberNMap">Tracker Number:\t%1$s</string>
    <string name="trackerImeiNMap">IMEI Number:\t\t\t%1$s</string>
    <string name="logTimeNMap">Last seen\t%1$s</string>
    <string name="latNMap">Lat:\t\t\t%1$s</string>
    <string name="lonNMap">Lon:\t\t\t%1$s</string>
    <string name="grsmNMap">GRSM\t%1$s</string>
    <string name="you">You</string>
    <string name="distanceKm">%1$s km</string>
    <string name="distanceM">%1$s m</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="distanceTravelled">Distance Travelled</string>
    <string name="signalStrength">Signal Strength</string>
    <string name="gsm">GSM</string>
    <string name="gps">GPS</string>
    <string name="restore">Restore</string>
    <string name="passwordRestoreDesc">Input your email and we will send you instructions for password restore</string>
    <string name="emailSent">Link for password reset has been emailed to you. Please check your email.</string>
    <string name="forgetYourPassword">Forget your password?</string>
    <string name="editPoi"><u>Edit Point of Interest</u></string>
    <string name="editPoiTitle">Edit Point of Interest</string>
    <string name="createPoiTitle">Create Point of Interest</string>
    <string name="deletePoi"><u>Remove Point of Interest</u></string>
    <string name="showOnMapTracker">Show on map trackers position during:</string>
    <string name="trackingHistory">Tracking History</string>
    <string name="poiName">Point of Interest name</string>
    <string name="poiNameCanNotBeEmpty">Point of interest name can not be empty</string>
    <string name="areYouSureRemovePoi">Are you sure you want to delete this point of interest?</string>
    <string name="removePoiTitle">Remove Point of Interest</string>
    <string name="remove">Remove</string>
    <string name="friendsRequiresSubscription">To use this action you should add your tracker first or buy annual subscription.</string>
    <string name="buySubscription">Buy subscription</string>
    <string name="reset">Reset</string>
    <string name="shutdown">Shutdown</string>
    <string name="bikeTracking">Bike Tracking</string>
    <string name="ledLight">LED Light</string>
    <string name="active">Active</string>
    <string name="turnOff">Turn Off</string>
    <string name="turnOn">Turn On</string>
    <string name="inactive">Inactive</string>
    <string name="shockAlarm">Shock Alarm</string>
    <string name="shockFlashAlarm">Shock Flash Alarm</string>
    <string name="code">Code</string>
    <string name="phoneCodeCanNotBeEmpty">Phone code can not be empty</string>
    <string name="pinCode">PIN Code</string>
    <string name="pinCodeLengthError">Input %1$s characters PIN code</string>
    <string name="trackerPinCode">Tracker PIN Code</string>
    <string name="last4DigitsError">Input tracker number last 4 digits</string>
    <string name="trackerLast4Digits">Tracker number last 4 digits</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zipCode">Postcode</string>
    <string name="addressCanNotBeEmpty">Address can not be empty</string>
    <string name="cityCanNotBeEmpty">City can not be empty</string>
    <string name="countryCanNotBeEmpty">Country can not be empty</string>
    <string name="zipCodeCanNotBeEmpty">Zip code can not be empty</string>
    <string name="skip"><u>Skip</u></string>
    <string name="pauseSubscription">Pause Subscription</string>
    <string name="pauseSubscriptionEmailBody" translatable="false">
        Name: %1$s\nAddress: %2$s\nUsername: %3$s\nIMEI: %4$s\nPhone: %5$s\n</string>
    <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
    <string name="helpNewTracker">Where can I find my\n<b>Tracker Number</b> and <b>IMEI</b>?</string>
    <string name="canBeFoundInside">can be found inside the box with tracker:</string>
    <string name="canBeFoundSticker">can be found on a sticker on the box side:</string>
    <string name="isPlacedOnTheBack">is placed on the back side of your tracker:</string>
    <string name="faq">FAQ</string>
    <string name="sleepMode">Sleep mode</string>
    <string name="checkBattery">Check Battery</string>
    <string name="last_seen_tools">Last seen 17:22 14.09.17</string>
    <string name="joe_tools">Joe</string>
    <string name="grsm_tools">GRSM 32VPM1237382377</string>
    <string name="seventy_five_tools">75%</string>
    <string name="distance_tools">3.5 km</string>
    <string name="speed_tools">6 km/h</string>
    <string name="distance_travelled_tools">15 km</string>
    <string name="select_image">Select image</string>
    <string name="delete_image">Delete image</string>
    <string name="could_not_upload_image">Could not upload image</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_info">Without this permission, the application will not work</string>
    <string name="allow">Allow</string>
    <string name="imsure">I\'M Sure</string>
    <string name="speedInfo">%1$s km/h</string>
    <string name="chargeInfo">%1$s %%</string>
    <string name="choosePhoto">Upload your photo</string>
    <string name="buy">Buy</string>
    <string name="meters">\tm</string>
    <string name="kilometers">\tkm</string>
    <string name="addTrackerInfo">Adding a tracker triggers a sim card subscription order</string>
    <string name="addTrackerInfoCheckBox">I have read and accept the subscription conditions</string>
    <string name="subscription_agreement">Subscription agreement</string>
    <string name="thisTrackerAlreadyExists">This tracker already exists</string>
    <string name="marcel">MARCEL</string>
    <string name="persmissions_warning">Now you will be asked to grant app access to SMS and calls.\n\nSMS permissions are required for communication between smartphone and your GPS trackers.\n\n Without these permissions you won\'t be able to control (swich on/off, set signal period, update internet settings) your trackers</string>
    <string name="no_thanks">No thanks</string>
</resources>