<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="no.appsonite.gpsping.viewmodel.BaseFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_gpsping_typical"
            app:title="@{@string/settings}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/connect"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/connect" />

                <TextView
                    android:id="@+id/profile"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/profile" />

                <TextView
                    android:id="@+id/faq"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/faq" />

                <TextView
                    android:id="@+id/about"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/about" />

                <TextView
                    android:id="@+id/buy"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/buy"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>