<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="no.appsonite.gpsping.viewmodel.BaseFragmentViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <include
            layout="@layout/toolbar_gpsping_typical"
            app:title="@{@string/about}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/website"
                style="@style/AppTheme.widget.Button.Green"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_margin_top"
                android:text="@string/visitWebsite" />

            <TextView
                android:id="@+id/contactUs"
                style="@style/AppTheme.widget.Button.Green"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_margin_top"

                android:text="@string/contactUs" />

            <TextView
                android:id="@+id/aboutApp"
                style="@style/AppTheme.widget.Button.Green"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_margin_top"

                android:text="@string/aboutApp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/big_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/youCanOrder"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="italic|bold" />
        </LinearLayout>
    </FrameLayout>
</layout>