<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- without this view dialog fragment doesn't match parent-->
    <View
        android:id="@+id/touchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:soundEffectsEnabled="false">

        <ImageView
            android:id="@+id/closeDialog"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_navigation_close" />

        <TextView
            android:layout_marginTop="-12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackerNumber"
            android:textColor="@color/mainTextColor"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/canBeFoundInside"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/photo_phone" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/imeiNumber"
            android:textColor="@color/mainTextColor"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/isPlacedOnTheBack"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/photo_imei" />
    </LinearLayout>

</FrameLayout>
