<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="no.appsonite.gpsping.viewmodel.MainFragmentViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/top_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/activeTracker"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:visibility="@{viewModel.activeTracker!=null?View.VISIBLE:View.INVISIBLE}" />

                <no.appsonite.gpsping.widget.CustomFontTextView
                    style="@style/AppTheme.widget.FormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-4dp"
                    android:text='@{viewModel.activeTracker != null ? viewModel.activeTracker.trackerName.get():"NoName"}'
                    android:visibility="@{viewModel.activeTracker!=null?View.VISIBLE:View.INVISIBLE}" />

                <TextView
                    android:id="@+id/startButton"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/circle_button"
                    android:gravity="center"
                    android:text="@{viewModel.activeTracker.isRunning?@string/stop:@string/start}"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="52sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mapButton"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/mapAndTracking" />

                <TextView
                    android:id="@+id/trackers"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/trackers" />

                <TextView
                    android:id="@+id/historyButton"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/history" />

                <TextView
                    android:id="@+id/settingsButton"
                    style="@style/AppTheme.widget.Button.Green"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="28dp"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/settings" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</layout>